[package]
name = "ratelimit_meter"
version = "1.0.0"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
homepage = "https://github.com/antifuchs/ratelimit_meter"
repository = "https://github.com/antifuchs/ratelimit_meter.git"
readme = "README.md"
description = "A leaky-bucket-as-a-meter rate-limiting implementation in Rust"
documentation = "https://docs.rs/ratelimit_meter"

[badges]
travis-ci = { repository = "antifuchs/ratelimit_meter", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
crossbeam = "0.3.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"
