[package]
name = "ratelimit_meter"
version = "3.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
homepage = "https://github.com/antifuchs/ratelimit_meter"
repository = "https://github.com/antifuchs/ratelimit_meter.git"
readme = "README.md"
description = "A leaky-bucket-as-a-meter rate-limiting implementation in Rust"
documentation = "https://docs.rs/ratelimit_meter"

# We use criterion, don't infer benchmark files.
autobenches = false

[badges]
travis-ci = { repository = "antifuchs/ratelimit_meter", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.clippy]
allow_failure = false

[package.metadata.template_ci.bench]
run = true
version = "stable"

[[bench]]
name = "criterion"
harness = false

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
parking_lot = "0.6.4"

[dev_dependencies]
libc = "0.2.41"
criterion = "0.2.5"
