[package]
edition = "2018"
name = "ratelimit_meter"
version = "5.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
homepage = "https://github.com/antifuchs/ratelimit_meter"
repository = "https://github.com/antifuchs/ratelimit_meter.git"
readme = "README.md"
description = "A leaky-bucket-as-a-meter rate-limiting implementation in Rust"
documentation = "https://docs.rs/ratelimit_meter"
categories = ["algorithms", "network-programming", "concurrency"]

# We use criterion, don't infer benchmark files.
autobenches = false

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.bench]
run = true
version = "stable"

[package.metadata.template_ci.additional_matrix_entries]

[package.metadata.template_ci.additional_matrix_entries.no_std_nightly]
run = true
version = "nightly"
commandline = "cargo +nightly test --no-default-features --features no_std"

[package.metadata.template_ci.additional_matrix_entries.no_std_stable]
run = true
version = "stable"
commandline = "cargo test --no-default-features --features no_std"

[badges]
circle-ci = { repository = "antifuchs/ratelimit_meter", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["parking_lot", "evmap", "nonzero_ext/std"]
no_std = ["spin"]

[[bench]]
name = "criterion"
harness = false

[dependencies]
nonzero_ext = {version = "0.1.5", default-features = false}
spin = {version = "0.5.0", optional = true}
parking_lot = {version = "0.9.0", optional = true}
evmap = {version = "6.0.0", optional = true}

[dev_dependencies]
libc = "0.2.41"
criterion = "0.2.11"
